infrastructure.yml
# AWS DISCLAMER
# __Provided to American Water on 22 March 2019__
---
# The following files are provided by AWS Professional Services describe the process
# to create an read-only breakglass role for security within your Infrastructure.
# These are non-production ready and are to be used for testing purposes.
# These files is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
# OR CONDITIONS OF ANY KIND, either express or implied. See the License
# for the specific language governing permissions and limitations under the License.
# (c) 2019 Amazon Web Services, Inc. or its affiliates. All Rights Reserved.
# This AWS Content is provided subject to the terms of the AWS Customer Agreement available at
# http://aws.amazon.com/agreement or other written agreement between Customer and Amazon Web Services, Inc.​
AWSTemplateFormatVersion: '2010-09-09'
Description: >-
    Creates a VPC, 3 Public Subnets and Private Subnets, assign CIDR Ranges to subnets,
    and Route tables for subnets. Adds a NAT Gateway
###
### CloudFormation Interface Metadata
###
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
     - Label:
         default: Instance Placement
         Parameters:
           - Region
           - AvailabilityZone1
           - AvailabilityZone2
           - AvailabilityZone3
     - Label:
         default: Instances
       Parameters:
         - BastionHostLinuxInstanceType
         - BastionHostWindowsInstanceType
         - KeyPairToLogIntoInstance
         - BastionSecurityGroupAcess
     - Label:
         default: CIDR Ranges
         Parameters:
           - CIDRRangeForVPC
           - CIDRRangeForAmWaterPlatformPublicSubnet1
           - CIDRRangeForAmWaterPlatformPublicSubnet2
           - CIDRRangeForAmWaterPlatformPublicSubnet3
           - CIDRRangeForAmWaterPlatformNonVulcanSubnet1
           - CIDRRangeForAmWaterPlatformNonVulcanSubnet2
           - CIDRRangeForAmWaterPlatformNonVulcanSubnet3
           - CIDRRangeForAmWaterPlatformVulcanEKSSubnet1
           - CIDRRangeForAmWaterPlatformVulcanEKSSubnet2
           - CIDRRangeForAmWaterPlatformVulcanEKSSubnet3
           - CIDRRangeForAmWaterPlatformDataLakeSubnet1
           - CIDRRangeForAmWaterPlatformDataLakeSubnet2
           - CIDRRangeForAmWaterPlatformDataLakeSubnet3
           - CIDRRangeForAmWaterPlatformTransactionalDBSubnet1
           - CIDRRangeForAmWaterPlatformTransactionalDBSubnet2
           - CIDRRangeForAmWaterPlatformTransactionalDBSubnet3
           - CIDRRangeForAmWaterPlatformOSGISSubnet1
           - CIDRRangeForAmWaterPlatformOSGISSubnet2
           - CIDRRangeForAmWaterPlatformOSGISSubnet3
           - CIDRRangeForAmWaterPlatformESRIGISSubnet1
           - CIDRRangeForAmWaterPlatformESRIGISSubnet2
           - CIDRRangeForAmWaterPlatformESRIGISSubnet3
###
### Template input parameters
###
Parameters:
  Region:
    Description: Region to create resources
    Type: String
    Default: us-east-1
    ConstraintDescription: Must be a valid AWS region.
  CIDRRangeForVPC:
    Description: CIDR Range for VPC
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x.
  CIDRRangeForAmWaterPlatformPublicSubnet1:
    Description: CIDR Ranges for AmWater Platform Public Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformPublicSubnet2:
    Description: CIDR Ranges for AmWater Platform Public Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformPublicSubnet3:
    Description: CIDR Ranges for AmWater Platform Public Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformNonVulcanSubnet1:
    Description: CIDR Ranges for AmWater Platform NonVulcan Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformNonVulcanSubnet2:
    Description: CIDR Ranges for AmWater Platform NonVulcan Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformNonVulcanSubnet3:
    Description: CIDR Ranges for AmWater Platform NonVulcan Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformVulcanEKSSubnet1:
    Description: CIDR Ranges for AmWater Platform VulcanEKS Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformVulcanEKSSubnet2:
    Description: CIDR Ranges for AmWater Platform VulcanEKS Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformVulcanEKSSubnet3:
    Description: CIDR Ranges for AmWater Platform VulcanEKS Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformDataLakeSubnet1:
    Description: CIDR Ranges for AmWater Platform DataLake Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformDataLakeSubnet2:
    Description: CIDR Ranges for AmWater Platform DataLake Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformDataLakeSubnet3:
    Description: CIDR Ranges for AmWater Platform DataLake Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformTransactionalDBSubnet1:
    Description: CIDR Ranges for AmWater Platform Transactional Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformTransactionalDBSubnet2:
    Description: CIDR Ranges for AmWater Platform Transactional Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformTransactionalDBSubnet3:
    Description: CIDR Ranges for AmWater Platform Transactional Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformOSGISSubnet1:
    Description: CIDR Ranges for AmWater Platform OSGIS Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformOSGISSubnet2:
    Description: CIDR Ranges for AmWater Platform OSGIS Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformOSGISSubnet3:
    Description: CIDR Ranges for AmWater Platform OSGIS Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformESRIGISSubnet1:
    Description: CIDR Ranges for AmWater Platform ESRIGIS Subnet 1.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformESRIGISSubnet2:
    Description: CIDR Ranges for AmWater Platform ESRIGIS Subnet 2.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  CIDRRangeForAmWaterPlatformESRIGISSubnet3:
    Description: CIDR Ranges for AmWater Platform ESRIGIS Subnet 3.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x with in the VPC CIDR Range.
  AvailabilityZone1:
    Description: Availability Zone 1.
    Type: String
    ConstraintDescription: Must be a valid AZ in the regions.
    Default: us-east-1a
    AllowedValues:
      - us-east-1a
      - us-east-1b
      - us-east-1c
      - us-east-1d
      - us-east-1e
  AvailabilityZone2:
    Description: Availability Zone 2.
    Type: String
    ConstraintDescription: Must be a valid AZ in the regions.
    Default: us-east-1b
    AllowedValues:
      - us-east-1a
      - us-east-1b
      - us-east-1c
      - us-east-1d
      - us-east-1e
  AvailabilityZone3:
    Description: Availability Zone 3.
    Type: String
    ConstraintDescription: Must be a valid AZ in the regions.
    Default: us-east-1c
    AllowedValues:
      - us-east-1a
      - us-east-1b
      - us-east-1c
      - us-east-1d
      - us-east-1e
  ShouldCreateNATGateway:
    Description: Whether NAT Gateway should be created as part of this stack
    Type: String
    Default: True
    AllowedValues:
      - True
      - False
    ConstraintDescription: Must be a True or False.
  LinuxBastionInstanceAMI:
    Description: AMI ID for Linux Bastion Instance
    Type: String
    Default: ami-0ff8a91507f77f867
    ConstraintDescription: Must be a valid AMI ID in the region.
  WindowsBastionInstanceAMI:
    Description: AMI ID for Windows Bastion Instance
    Type: String
    Default: ami-09ef280df1a6a5330
    ConstraintDescription: Must be a valid AMI ID in the region.
  BastionHostLinuxInstanceType:
    Description: Bastion Host Instance Type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
    ConstraintDescription: Must select a valid Linux instance type.
  BastionHostWindowsInstanceType:
    Description: Bastion Host Instance Type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
    ConstraintDescription: Must select a valid Windows instance type.
  KeyPairToLogIntoLinuxInstance:
    Description: KeyPair to log into instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.
  KeyPairToLogIntoWindowsInstance:
    Description: KeyPair to log into instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.
  BastionSecurityGroupAcess:
    Description: The IP address range that can be used to log into SSH
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 192.234.148.0/23
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Valid IP CIDR range of the form x.x.x.x/x.
  TenantNameTAG:
    Description: Choose a tenant 
    Type: String
    Default: AM Water
    AllowedValues:
      - AM Water
      - Other
  EnvironmentTAG: 
    Description: Choose an environment for the resource
    Type: String
    AllowedValues:
      - SB
      - NP
      - PROD
  ProductLineTAG:
    Description: Choose a Prodcut Line
    Type: String
    AllowedValues:
      - Customer
      - Assert
      - Water Management
      - H&S
      - Water Intelligence
      - Other
  PlatfromServicesTAG:
    Description: Choose a platfrom service
    Type: String
    AllowedValues:
      - Network
      - Security
      - Data
      - API
      - CS
      - Container
      - CMS
      - Logging & Monitoring
      - Transactional DB
      - Other
  ApplicationNameTAG:
    Description: Enter the name of the application 
    Type: String
    ConstraintDescription: Must be a valid application name
  ComplianceTAG:
    Description: Complaince for the Infrastructure.
    Type: String
    Default: TBD
Conditions:
  CreateNATGateway: !Equals [!Ref ShouldCreateNATGateway, True]
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CIDRRangeForVPC
      Tags:
        - Key: Name
          Value: !Sub AmWater - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub Internet Gateway - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicRoutetoInternet:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Solution
          Value: !Sub Public Route Table - ${AWS::StackName}
  AmWaterPlatformPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformPublicSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform Public Subnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformPublicSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform Public Subnet2 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformPublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformPublicSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform Public Subnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformPublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformPublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  AmWaterPlatformPublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformPublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  AmWaterPlatformPublicSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformPublicSubnet3
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub Private Route Table - ${AWS::StackName}
  AmWaterPlatformVulcanEKSSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformVulcanEKSSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform VulcanEKSSubnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformVulcanEKSSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformVulcanEKSSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform VulcanEKSSubnet2 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformVulcanEKSSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformVulcanEKSSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform VulcanEKSSubnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformVulcanEKSSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformVulcanEKSSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformVulcanEKSSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformVulcanEKSSubnet2
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformVulcanEKSSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformVulcanEKSSubnet3
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformNonVulcanSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformNonVulcanSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform NonVulcanSubnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformNonVulcanSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformNonVulcanSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform NonVulcanSubnet2 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformNonVulcanSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformNonVulcanSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform NonVulcanSubnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformNonVulcanSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformNonVulcanSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformNonVulcanSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformNonVulcanSubnet2
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformNonVulcanSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformNonVulcanSubnet3
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformDataLakeSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformDataLakeSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform DataLakeSubnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformDataLakeSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformDataLakeSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform DataLakeSubnet2 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformDataLakeSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformDataLakeSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform DataLakeSubnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformDataLakeSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformDataLakeSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformDataLakeSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformDataLakeSubnet2
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformDataLakeSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformDataLakeSubnet3
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformTransactionalSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformTransactionalDBSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform TransactionalSubnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformTransactionalSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformTransactionalDBSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform TransactionalSubnet2 - ${AWS::StackName}
        - Key: TenantName
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: ProductLine
          Value:
            Ref: ProductLineTAG
        - Key: PlatformServices
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformTransactionalSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformTransactionalDBSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform TransactionalSubnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformTransactionalSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformTransactionalSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformTransactionalSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformTransactionalSubnet2
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformTransactionalSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformTransactionalSubnet3
      RouteTableId: !Ref PrivateRouteTable    
  AmWaterPlatformOSGISSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformOSGISSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform OSGISSubnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformOSGISSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformOSGISSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform OSGISSubnet2 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformOSGISSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformOSGISSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform OSGISSubnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformOSGISSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformOSGISSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformOSGISSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformOSGISSubnet2
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformOSGISSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformOSGISSubnet3
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformESRIGISSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformESRIGISSubnet1
      AvailabilityZone: !Ref AvailabilityZone1
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform ESRIGISSubnet1 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformESRIGISSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformESRIGISSubnet2
      AvailabilityZone: !Ref AvailabilityZone2
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform ESRIGISSubnet2 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformESRIGISSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref CIDRRangeForAmWaterPlatformESRIGISSubnet3
      AvailabilityZone: !Ref AvailabilityZone3
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform ESRIGISSubnet3 - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  AmWaterPlatformESRIGISSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformESRIGISSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformESRIGISSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformESRIGISSubnet2
      RouteTableId: !Ref PrivateRouteTable
  AmWaterPlatformESRIGISSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref AmWaterPlatformESRIGISSubnet3
      RouteTableId: !Ref PrivateRouteTable  
  EIP:
    Type: AWS::EC2::EIP
    Condition: CreateNATGateway
    Properties:
      Domain: vpc
  NAT:
    Type: AWS::EC2::NatGateway
    Condition: CreateNATGateway
    DependsOn: AttachGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP
        - AllocationId
      SubnetId:
        Ref: AmWaterPlatformPublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub AmWater Platform NAT Gateway - ${AWS::StackName}
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
  PrivateRoutetoNAT:
    Type: AWS::EC2::Route
    Condition: CreateNATGateway
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT
  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Bastion Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref BastionSecurityGroupAcess
          Description: Enable SSH access via port 22
      Tags:
        - Key: Solution
          Value: !Sub Bastion - ${AWS::StackName}
        - Key: Name
          Value: Bastion Security Group
      VpcId: !Ref VPC
  WindowsBastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Bastion Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3389'
          ToPort: '3389'
          CidrIp: !Ref BastionSecurityGroupAcess
          Description: Enable SSH access via port 3389 for RDP
      Tags:
        - Key: Solution
          Value: !Sub Bastion - ${AWS::StackName}
        - Key: Name
          Value: Windows Bastion Security Group
      VpcId: !Ref VPC
  BastionLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    DependsOn: BastionSecurityGroup
    Properties:
      LaunchConfigurationName: !Sub BastionLaunchConfig - ${AWS::StackName}
      AssociatePublicIpAddress: true
      ImageId: !Ref LinuxBastionInstanceAMI
      EbsOptimized: false
      InstanceMonitoring: true
      InstanceType: !Ref BastionHostLinuxInstanceType
      KeyName: !Ref KeyPairToLogIntoLinuxInstance
      SecurityGroups:
        - !Ref BastionSecurityGroup
  WindowsBastionLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    DependsOn: WindowsBastionSecurityGroup
    Properties:
      LaunchConfigurationName: !Sub WindowsBastionLaunchConfig - ${AWS::StackName}
      AssociatePublicIpAddress: true
      ImageId: !Ref WindowsBastionInstanceAMI
      EbsOptimized: false
      InstanceMonitoring: true
      InstanceType: !Ref BastionHostWindowsInstanceType
      KeyName: !Ref KeyPairToLogIntoWindowsInstance
      SecurityGroups:
        - !Ref WindowsBastionSecurityGroup
  BastionASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub bastion-ASG - ${AWS::StackName}
      Cooldown: 300
      DesiredCapacity: 1
      HealthCheckGracePeriod: 300
      HealthCheckType: EC2
      LaunchConfigurationName: !Ref BastionLaunchConfig
      MaxSize: 1
      MinSize: 1
      Tags:
        - Key: Name
          Value: !Sub LinuxBastionHost - ${AWS::StackName}
          PropagateAtLaunch: true
        - Key: Tenant Name
          Value:
            Ref: TenantNameTAG
          PropagateAtLaunch: true
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
          PropagateAtLaunch: true
        - Key: Product Line
          Value:
            Ref: ProductLineTAG
          PropagateAtLaunch: true
        - Key: Platform Services
          Value:
            Ref: PlatfromServicesTAG
          PropagateAtLaunch: true
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
          PropagateAtLaunch: true
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
          PropagateAtLaunch: true
        - Key: Solution
          PropagateAtLaunch: true
          Value: !Sub Bastion - ${AWS::StackName}
      VPCZoneIdentifier:
        - !Ref AmWaterPlatformPublicSubnet1
        - !Ref AmWaterPlatformPublicSubnet2
        - !Ref AmWaterPlatformPublicSubnet3
  WindowsBastionASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub windows-bastion-ASG - ${AWS::StackName}
      Cooldown: 300
      DesiredCapacity: 1
      HealthCheckGracePeriod: 300
      HealthCheckType: EC2
      LaunchConfigurationName: !Ref WindowsBastionLaunchConfig
      MaxSize: 1
      MinSize: 1
      Tags:
        - Key: Name
          Value: !Sub WindowsBastionHost - ${AWS::StackName}
          PropagateAtLaunch: true
        - Key: TenantName
          Value:
            Ref: TenantNameTAG
          PropagateAtLaunch: true
        - Key: Environment
          Value: 
            Ref: EnvironmentTAG
          PropagateAtLaunch: true
        - Key: ProductLine
          Value:
            Ref: ProductLineTAG
          PropagateAtLaunch: true
        - Key: PlatformServices
          Value:
            Ref: PlatfromServicesTAG
          PropagateAtLaunch: true
        - Key: Application Name
          Value:
            Ref: ApplicationNameTAG
          PropagateAtLaunch: true
        - Key: Compliance
          Value:
            Ref: ComplianceTAG
          PropagateAtLaunch: true
        - Key: Solution
          Value: !Sub Bastion - ${AWS::StackName}
          PropagateAtLaunch: true
      VPCZoneIdentifier:
        - !Ref AmWaterPlatformPublicSubnet1
        - !Ref AmWaterPlatformPublicSubnet2
        - !Ref AmWaterPlatformPublicSubnet3
